# Rust-ZK-Shadow-EVM

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
contracts/src/: IRiscZeroVerifier.sol  ShadowEVMVerifier.sol
contracts/test/: ShadowEVMVerifier.t.sol
core/: Cargo.toml
core/src/: errors.rs  evm.rs  hashing.rs  input.rs  lib.rs  output.rs  state.rs  types.rs
docs/: architecture.md  proof-system.md  roadmap.md  zk-design.md
examples/erc20-transfer/: Cargo.toml  main.rs
examples/simple-call/: Cargo.toml  main.rs
examples/uniswap-swap/: Cargo.toml  main.rs
scripts/: setup.sh
zkvm/guest/: Cargo.toml
zkvm/guest/src/: main.rs  types.rs
zkvm/guest/src/evm/: executor.rs  host_io.rs  mod.rs  state.rs
zkvm/host/: Cargo.toml  build.rs
zkvm/host/src/: io.rs  main.rs  prover.rs  verifier.rs
