[package]
name = "shadow-evm-guest"
version = "0.1.0"
edition = "2021"
description = "RISC Zero guest program for Shadow-EVM ZK Coprocessor"

[dependencies]
# Core Shadow-EVM library with no_std
shadow-evm-core = { path = "../../core", default-features = false }

# RISC Zero guest SDK
risc0-zkvm = { version = "1.2", default-features = false }

[profile.release]
opt-level = 3
lto = true
