[package]
name = "shadow-evm-host"
version = "0.1.0"
edition = "2021"
description = "RISC Zero host program for Shadow-EVM ZK Coprocessor"

[dependencies]
# Core Shadow-EVM library
shadow-evm-core = { path = "../../core" }

# RISC Zero host SDK
risc0-zkvm = { version = "1.2" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"

# Hex encoding for display
hex = "0.4"

[build-dependencies]
risc0-build = { version = "1.2" }
